--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -472,6 +472,7 @@ margin-left: 80px;
   color: white;
   text-align: center;
   font-size: 270%;
+  border-top:solid;
   border-bottom: solid;
   padding-bottom: 10px;
   padding-top: 10px;
@@ -486,10 +487,7 @@ margin-left: 80px;
   width: 150px;
   height: 150px;
   min-height: 150px;
-  border: solid;
-  border-color: #41556B;
   background-color: #41556B;
-  border-width: 2px;
   border-radius: 10px;
   margin-top: 14px;
   margin-left: 24px;
@@ -531,3 +529,68 @@ margin-left: 80px;
 }
 
 
+.award-new-not {
+  padding-top: 8px;
+  float: left;
+  width: 150px;
+  height: 150px;
+  min-height: 150px;
+  background-color: rgba(203, 58, 77, 0.5);
+  border-radius: 10px;
+  margin-top: 14px;
+  margin-left: 24px;
+}
+
+.award-new-not:hover {
+  background-color: rgba(203,58,77,0.2);
+}
+
+.award-new-not:hover .award-image center img {
+  display:none;
+}
+
+.award-new-not:hover .award-new-req {
+  display: block;
+}
+
+.award-new-not:hover .award-new-name {
+  padding-top: 15px;
+}
+
+.award-image center img {
+  padding: 17px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.award-new-name {
+  padding-top: 4px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.award-new-req {
+  display: none;
+  padding-top: 18px;
+  text-align:center;
+  font-size: 18px;
+}
+
+.none {
+  width: 700px;
+  font-size: 190%;
+  line-height: 40px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-right: 12px;
+  padding-left: 12px;
+  text-align: center;
+  border-radius: 10px;
+  background-color:rgba(203,58,77,0.3);
+}
+
+.none:hover {
+  background-color: rgba(203,58,77,0.5);
+}
