--- a/arability/app/views/games/_show_prizes.html.erb
+++ b/arability/app/views/games/_show_prizes.html.erb
@@ -1,164 +1,62 @@
 <div class="award-zone" id="award-list">
   <div class="won">
-    <h3 class="title-head">Earned prizes</h3>
-    <div class="award-new">
-      <div class="award-image">
-        <center>
-          <img src="/assets/rails.png" width="60" height="60"/>
-        </center>
-      </div>
-      <div class="award-new-name">
-        Hehehe
-      </div>
-      <div class="award-new-req">
-        Level 10
-      </div>
-      <div class="award-new-req">
-        Score 10
-      </div>
+    <% if I18n.locale == :en %>
+      <a class="pull-right btn btn-success" style="padding: 5px; margin-right: 12px; margin-top: 28px;" onclick="backToGame()">Back</a>
+    <% else %>
+      <a class="pull-left btn btn-success" style="padding: 5px; margin-left: 28px; margin-top: 28px;" onclick="backToGame()">رجوع </a>
+    <% end %>
+    <h3 class="title-head"><%= t(:won_prizes_title) %></h3>
+    <% if @won_prizes.size == 0 %>
+    <div class="none">
+      <%= t(:no_prizes) %>
     </div>
-
-    <div class="award-new">
-      <div class="award-image">
-        <center>
-          <img src="/assets/rails.png" width="60" height="60"/>
-        </center>
-      </div>
-      <div class="award-new-name">
-        Hehehe
-      </div>
-      <div class="award-new-req">
-        Level 10
-      </div>
-      <div class="award-new-req">
-        Score 10
-      </div>
-    </div>
-
-    <div class="award-new">
-      <div class="award-image">
-        <center>
-          <img src="/assets/rails.png" width="60" height="60"/>
-        </center>
-      </div>
-      <div class="award-new-name">
-        Hehehe
-      </div>
-      <div class="award-new-req">
-        Level 10
-      </div>
-      <div class="award-new-req">
-        Score 10
-      </div>
-    </div>
-
-    <div class="award-new">
-      <div class="award-image">
-        <center>
-          <img src="/assets/rails.png" width="60" height="60"/>
-        </center>
-      </div>
-      <div class="award-new-name">
-        Hehehe
-      </div>
-      <div class="award-new-req">
-        Level 10
-      </div>
-      <div class="award-new-req">
-        Score 10
-      </div>
-    </div>
-
-    <div class="award-new">
-      <div class="award-image">
-        <center>
-          <img src="/assets/rails.png" width="60" height="60"/>
-        </center>
-      </div>
-      <div class="award-new-name">
-        Hehehe
-      </div>
-      <div class="award-new-req">
-        Level 10
-      </div>
-      <div class="award-new-req">
-        Score 10
-      </div>
-    </div>
-
-      <div class="award-new">
-      <div class="award-image">
-        <center>
-          <img src="/assets/rails.png" width="60" height="60"/>
-        </center>
-      </div>
-      <div class="award-new-name">
-        Hehehe
-      </div>
-      <div class="award-new-req">
-        Level 10
-      </div>
-      <div class="award-new-req">
-        Score 10
-      </div>
-    </div>
-  
-
-      <div class="award-new">
-      <div class="award-image">
-        <center>
-          <img src="/assets/rails.png" width="60" height="60"/>
-        </center>
-      </div>
-      <div class="award-new-name">
-        Hehehe
-      </div>
-      <div class="award-new-req">
-        Level 10
-      </div>
-      <div class="award-new-req">
-        Score 10
-      </div>
-    </div>
-
-      <div class="award-new">
-      <div class="award-image">
-        <center>
-          <img src="/assets/rails.png" width="60" height="60"/>
-        </center>
-      </div>
-      <div class="award-new-name">
-        Hehehe
-      </div>
-      <div class="award-new-req">
-        Level 10
-      </div>
-      <div class="award-new-req">
-        Score 10
-      </div>
-    </div>
-
-      <div class="award-new">
-      <div class="award-image">
-        <center>
-          <img src="/assets/rails.png" width="60" height="60"/>
-        </center>
-      </div>
-      <div class="award-new-name">
-        Hehehe
-      </div>
-      <div class="award-new-req">
-        Level 10
-      </div>
-      <div class="award-new-req">
-        Score 10
-      </div>
-    </div>
-  
+    <% else %>
+      <% @won_prizes.each do |prize| %>
+        <div class="award-new">
+          <div class="award-image">
+            <center>
+              <img src="<%= prize.image %>" width="60" height="60"/>
+            </center>
+          </div>
+          <div class="award-new-name">
+            <%= prize.name %>
+          </div>
+          <div class="award-new-req">
+            <%= t(:level) %> <%= prize.level %>
+          </div>
+          <div class="award-new-req">
+            <%= t(:score) %> <%= prize.score %>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
   </div>
 
   <div class="not-won">
-    <h3 class="title-head">Available prizes</h3>
+    <h3 class="title-head"><%= t(:not_won_prizes_title) %></h3>
+    <% if @not_won_prizes.size == 0 %>
+    <div class="none">
+      <%= t(:all_prizes) %>
+    </div>
+    <% else %>
+      <% @not_won_prizes.each do |prize| %>
+        <div class="award-new-not">
+          <div class="award-image">
+            <center>
+              <img src="<%= prize.image %>" width="60" height="60"/>
+            </center>
+          </div>
+          <div class="award-new-name">
+            <%= prize.name %>
+          </div>
+          <div class="award-new-req">
+            <%= t(:level) %> <%= prize.level %>
+          </div>
+          <div class="award-new-req">
+            <%= t(:score) %> <%= prize.score %>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
   </div>
 </div>
-  
