--- a/arability/app/views/devise/registrations/new_social.html.erb
+++ b/arability/app/views/devise/registrations/new_social.html.erb
@@ -1,25 +1,20 @@
-<% if I18n.locale == :ar %>
-<em><h3 class="text-info"> انشاء حساب جديد للاعب</h3></em>
-<% else %>
-<em><h3 class="text-info">Sign up with an existing account</h3></em>
-<% end %>
+<em><h3 class="text-info"><%= t(:sign_up_e_acc) %></h3></em>
 <div class="container well">
 <%= form_for(resource, :as => resource_name, :url => "/social_registrations/social_sign_in") do |f| %> 
     <% if @errors and @errors.length > 0 %>
-        <div class="alert">
-            <div id="error_explanation">
-                <h2><%= @errors.length %> errors prohibited this gamer from being saved:</h2>
-                <ul>
-                    <% @errors.each do |error| %>
-                    <li><%= error %></li>
-                    <% end %>
-                </ul>
-            </div>
+    <div class="alert">
+        <div id="error_explanation">
+            <h2><%= @errors.length %> <%= t(:errors_prohibited) %></h2>
+            <ul>
+                <% @errors.each do |error| %>
+                <li><%= error %></li>
+                <% end %>
+            </ul>
         </div>
+    </div>
     <% end %>
 
     <div class="container">
-
         <div><%= f.label t(:email), :class => "control-label" %>
         <%= f.email_field :email, :style => "margin-left: 10px;", :value => @email  %></div></br>
 
@@ -28,10 +23,10 @@
 
         <div><%= f.label t(:gender), :class => "control-label" %>
         <% if I18n.locale == :ar %>
-            <%= f.select(:gender,options_for_select([['ذكر','male'],['انثي','female']], {:selected => @gender}),{}, :style => "margin-left: 10px;" ) %></div></br>  
+            <%= f.select(:gender,options_for_select([['ذكر','male'],['انثي','female']], {:selected => @gender}),{}, :style => "margin-left: 10px;" ) %> 
         <% else %>
-            <%= f.select(:gender,options_for_select(['male','female'],{:selected => @gender}),{}, :style => "margin-left: 10px;") %></div></br> 
-        <% end %> 
+            <%= f.select(:gender,options_for_select(['male','female'],{:selected => @gender}),{}, :style => "margin-left: 10px;") %> 
+        <% end %> </div></br>
 
         <span style="color:red;"><b><i>*<%= t(:fill_in_next) %></i></b></span><br><br>
 
@@ -45,23 +40,20 @@
                     ['الاردن','Jordan'],['السعودية','Saudi Arabia'],['ليبيا','Libya'],['الامارات','United Arab Emirates'],['قطر','Qatar'],['الكويت','Kuwait'],
                     ['العراق','Iraq'],['الجزأئر','Algeria'],['المغرب','Morocco'],['البحرين','Bahrain'],
                     ['موريتانيا','mauritania'],['الصومال','Somalia'],['السودان','Sudan'],['تونس','Tunisia'],
-                    ['اخري','others']]), {},
-                {:style => "margin-left: 10px;" }) %>
-            </div></br>
+                    ['اخري','others']]), {}, {:style => "margin-left: 10px;" }) %>
         <% else %>
             <span style="margin-left: 10px;">
                 <%= f.country_select :country, [ "Egypt", "Lebanon", "Jordan" ]%>
-            </span></div></br>
-        <% end %>
-
+            </span>
+        <% end %></div></br>
 
         <div><%= f.label t(:education_level), :class => "control-label" %>
         <% if I18n.locale == :ar %>
             <%= f.select(:education_level, options_for_select(['',['مدرسة','School'],['جامعة','University'],
-            ['خريج','Graduate']]), {}, { :style => "margin-left: 10px;" }) %></br></div>
+            ['خريج','Graduate']]), {}, { :style => "margin-left: 10px;" }) %>
         <% else %>
-            <%= f.select(:education_level, options_for_select(['','School','University','Graduate']), {}, { :style => "margin-left: 10px;" }) %></br></div>
-        <% end %>
+            <%= f.select(:education_level, options_for_select(['','School','University','Graduate']), {}, { :style => "margin-left: 10px;" }) %>
+        <% end %></div></br>
 
         <%= f.hidden_field :gid, :value => @gid %>
 
@@ -73,15 +65,7 @@
 
         <%= f.hidden_field :social_email, :value => @email %>
 
-        <% if I18n.locale == :ar %>
-            <div><%= f.submit "سجل الحساب", :class => "btn btn-success" %></div>
-        <% else %>
-            <div><%= f.submit "Sign up", :class => "btn btn-success" %></div>
-        <% end %>
-
+        <div><%= f.submit t(:sign_up), :class => "btn btn-success" %></div>
     </div>
-        
-
-    </div>
-
-    <% end %>
+</div>
+<% end %>
