[issue #167][WIP][adding exposure to the table on forming words description, and tweeking some popover css]

--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -491,13 +491,14 @@ margin-left: 80px;
 }
 
 td .popover{
-  top: -220px;
-  left: -99.5px;
-  width: 250px;
+  top: 195px;
+  left: 335.5px;
+  width: 400px;
+  max-width: 400px;
 }
 
 td .popover button{
-  margin-left: 40px;
+  margin-left: 120px;
 }
 
 .game-lang .popover button{
