--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -20,7 +20,7 @@
           <li class="divider-vertical"></li>
           <li>
             <% if guest_gamer != nil %>
-              <a href="<%=guest_continue_sign_up_path%>"><%= t :sign_up %></a>
+              <a href="<%=guest_continue_sign_up_path%>"><%= t :become_member %></a>
             <% else %>
               <a href="/gamers/sign_up"><%= t :sign_up %></a>
             <% end %>
