--- a/arability/app/views/devise/registrations/new.html.erb
+++ b/arability/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <% if I18n.locale == :ar %>
-<em><h3 class="text-info"> انشاء حساب جديد للاعب</h3></em>
+<em><h3 class="text-info">انشاء حساب عربيليتي جديد</h3></em>
 <% else %>
-<em><h3 class="text-info">Sign up <%= resource_name.to_s.humanize %></h3></em>
+<em><h3 class="text-info">Create a new Arability account</h3></em>
 <% end %>
 <div class="container well">
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
