[issue #353] [WIP] fixes a bug of selecting a word with a star from autocomplete dropdown

--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -120,6 +120,12 @@
     items: 8,
     highlighter: function(item) {
       return item
+    },
+    updater: function(item){
+      if(item.charAt(item.length-1) == ">"){
+       item = item.substring(0,item.indexOf("<"));
+       return item
+     }
     }
   });
   function fetch_keywords(keyword, callback){
