[Issue #205][WIP] Fixed reviewers errors

--- a/arability/app/views/projects/_form.html.erb
+++ b/arability/app/views/projects/_form.html.erb
@@ -20,11 +20,11 @@
         </div>
     </div>
     <div class="control-group">
-      <%= f.label t(:categories), class: "control-label" %>
+      <%= f.label t(:category), class: "control-label" %>
       <div class="controls">
         <% if params[:action] == "new" %>
           <%= f.collection_select(:category, Category.all, :id, :get_name_by_locale, { prompt: true }, { id:"cat" }) %>
-        <% elsif params[:action] == "edit" %>
+        <% else %>
           <%= f.collection_select(:category, Category.all, :id, :get_name_by_locale, { prompt: @select_value, selected: @project.category_id.to_i }, { id:"cat" }) %>
         <% end %>
     </div>
