--- a/arability/app/views/projects/load_synonyms.js.erb
+++ b/arability/app/views/projects/load_synonyms.js.erb
@@ -9,7 +9,11 @@ update_synonym_list(synonym_names, synonym_ids);
 
 function update_synonym_list(synonym_names, synonym_ids){
 	if(synonym_names.length == 0){
-		$("#selected_synonym").html("");
+		<% if I18n.locale == :en %>
+			$("#selected_synonym").html("<option>no translations</option>");
+		<% else %>
+			$("#selected_synonym").html("<option>لا يوجد معاني</option>");
+		<% end %>
 		document.getElementById("selected_synonym").disabled=true;
 	}
 	else {
