--- a/arability/app/views/search/search_keywords.html.erb
+++ b/arability/app/views/search/search_keywords.html.erb
@@ -3,11 +3,11 @@
 		<%= form_tag(search_keywords_path, :method => "post", :class => "form-search") do %>
 	  	<%= content_tag(:div, :class => "input-append") do %>
 	  		<% text_field_tag(:search, @search_keyword,
-	  											:placeholder => t(:search_here),
+	  											placeholder: t(:search_here),
 	  											:class => "search-query",
-                          :tabindex => "1") + %>
-				<% button_tag(:type => "submit", :class => "btn", :id => "search_button",
-          :tabindex => "3") do %>
+                          tabindex: "1") + %>
+				<% button_tag(:type => "submit", :class => "btn", id: "search_button",
+          tabindex: "3") do %>
 					<% content_tag(:i, nil,:class => "icon-search") %>
 				<% end %>
 			<% end %>
@@ -24,8 +24,8 @@
 		<% if @similar_keywords.blank? && !@search_keyword.blank? %>
 			<div class="well well-small">
 				<span>
-					<%= form_tag(keywords_create_path, :method => "post",
-           :style => "margin-bottom:0px;", :onsubmit => "submit_add_keyword(this)") do %>
+					<%= form_tag(keywords_create_path, method: "post",
+           style: "margin-bottom:0px;", onsubmit: "submit_add_keyword(this)") do %>
             <%= content_tag(:span, t(:keyword_not_found)) %>
             <input name="keyword[name]" value="<%= @search_keyword %>" type="hidden">
             <input name="redirect" value="<%= search_keywords_path %>" type="hidden">
