--- a/arability/app/views/pages/home.html.erb
+++ b/arability/app/views/pages/home.html.erb
@@ -1,13 +1,4 @@
-  <body>
-    <meta charset="utf-8">
-    <title>Carousel Template &middot; Bootstrap</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <!-- Le styles -->
-    <link href="../assets/css/bootstrap.css" rel="stylesheet">
-    <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+<%= content_for :home_content do %>
     <style>
 
     /* GLOBAL STYLES
@@ -342,4 +333,5 @@
     <script src="../assets/js/bootstrap-typeahead.js"></script>
     
     <script src="../assets/js/holder/holder.js"></script>
-  </body>
+
+<% end %>
