--- a/arability/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/arability/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,6 +1,4 @@
 @import "bootstrap";
-
-
 .form-signin {
   max-width: 300px;
   padding: 19px 29px 29px;
@@ -35,6 +33,44 @@ div.field_with_errors {
   @extend ul;
   margin: 0 0 0px 10px;
 }
+.navbar {
+  .navbar-inner {
+    min-height: 30px;
+    max-height: 30px;
+    background-color: black;
+    background-image: none;
+  }
+}
+
+.navbar {
+font: 13px/27px Arial,sans-serif;
+font-weight: bold;
+line-height: 20px;
+}
+
+.navbar .brand{
+font: 13px/27px Arial,sans-serif;
+font-weight: bold;
+line-height: 20px;
+float: left;
+padding: 4px  10px;
+color: #bbb;
+}
+
+.navbar .nav > li > a {
+float: right;
+padding: 4px  18px;
+color: #bbb;
+}
+
+.dropdown-menu {
+background-color: black;
+}
+
+
+
+
+
 @import "bootstrap-responsive";
 
 
