--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -109,6 +109,7 @@
              </td>
             </tr>
       </table>
+      <p id="illustration"></br></p>
     </div>
   </form> 
 <script type="text/javascript" charset="utf-8">
@@ -117,11 +118,12 @@
   });
   $(".autocomplete").typeahead({
     source: fetch_keywords,
-    items: 8,
+    items: 10,
     highlighter: function(item) {
       return item
     },
     updater: function(item){
+      document.getElementById('illustration').innerHTML = '</br>';
       if(item.charAt(item.length-1) == ">"){
        item = item.substring(0,item.indexOf("<"));
        return item
@@ -133,9 +135,14 @@
       length = data[Object.keys(data).length-1];
       for(var i = 0; i < Object.keys(data).length; i++){
         if(i >= length){
-         data[i] = data[i]+"   *".fontcolor("red") 
+         data[i] = data[i]+"   *".fontcolor("red") ;
         }
       }
+      <% if I18n.locale == :en %>
+        document.getElementById('illustration').innerHTML = 'Keywords with <font color="red">   *   </font> are not in your project categories.';
+      <% else %>
+        document.getElementById('illustration').innerHTML = 'الكلمات المصحوبة ب<font color="red">   *   </font>ليس في فئات مشروعك.';
+      <% end %>
       callback(data);
     })
   }
