--- a/arability/app/views/projects/new.html.erb
+++ b/arability/app/views/projects/new.html.erb
@@ -1,3 +1,3 @@
-<Legend class="container"><a><%= t(:new_project)%></a></Legend>
+<Legend class="container"><%= t(:new_project)%></Legend>
 
 <%= render 'form' %>
