--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -293,9 +293,12 @@ function setButtons(){
       <% if I18n.locale == :ar %>
     <h2 class="lang-header">إختر اللغة التي تريد اللعب بها</h2><br>
     <div class="game-lang">
-      <button class="btn btn-info eng-btn" onclick="setLang(0)">الانجليزية</button><br><br><br><br>
-      <button class="btn btn-success ar-btn" onclick="setLang(1)">العربية</button><br><br><br><br>
-      <button class="btn btn-warning both-btn" onclick="setLang(2)">كلاهما</button>
+      
+      <div id="exposedEngBtnDiv"><button data-trigger="manual" data-content="<p>This button allows you to form, and vote on, only english words during game play<p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='eng-btn-po'onclick='destroy(this.id)'>Got it</button>" data-placement="left" data-title="<h4>English Button</h4>" data-html="true" id = "eng-btn" class="btn btn-info eng-btn" onclick="setLang(0)">الانجليزية</button></div><br><br><br><br>
+
+      <div id="exposedArBtnDiv"><button data-trigger="manual" data-content="<p>This button allows you to form, and vote on, only arabic words during game play<p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='ar-btn-po'onclick='destroy(this.id)'>Got it</button>" data-placement="right" data-title="<h4>Arabic Button</h4>" data-html="true" id = "ar-btn" class="btn btn-success ar-btn" onclick="setLang(1)">العربية</button></div><br><br><br><br>
+
+      <div id="exposedBothBtnDiv"><button data-trigger="manual" data-content="<p>This button allows you to form, and vote on both arabic and english words during game play<p> <button class=' tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='both-btn-po'onclick='destroy(this.id)'>Got it</button>" data-placement="left" data-title="<h4>Both Button</h4>" data-html="true" id = "both-btn" class="btn btn-warning both-btn" onclick="setLang(2)">كلاهما</button></div>
     </div>
     <% else %>
     <h2 class="lang-header">Pick the language you want to play with</h2><br>
