--- a/arability/app/views/games/_profile.html.erb
+++ b/arability/app/views/games/_profile.html.erb
@@ -1,6 +1,6 @@
 <div class = "main-div">
 <h3 id="header-vl" class ="heading"><%= t(:vote_log)%>
-<a class="btn btn-success pull-left" onclick="backToGame()"><%= t(:back_log)%></a>
+<a class="btn btn-success btn-game" onClick="backToGame()"><%= t(:back_log)%></a>
 </h3>
 <table class="table table-bordered table-striped styling-center-table">
   <% if !@vote_log.blank? %>
@@ -14,7 +14,7 @@
   <% else %>
     <tr>
       <td></td>
-      <td id = "table-row-vl"> <b class = "coloring"> <%= t(:no_you) %>  </b> <%= t(:no_vote_log) %></td>
+      <td id = "table-row-vl"> <b class = "coloring"> <%= t(:no_you) %>  </b> <%= t(:no_vote_log) %> <a href="/game"> <%= t(:play_link_log) %> </a></td>
       <td></td>
     </tr>
   <% end %>
@@ -34,6 +34,7 @@
   color:white;
   padding-right: 20px;
   padding-left: 20px;
+  position: relative;
 }
 
 .styling-center-table{
@@ -65,6 +66,12 @@
   font-size:38px;
 }
 
+.btn-game {
+ position:absolute;
+ top:5px;
+ left:10px;
+}
+
 </style>
 
 <script type="text/javascript">
@@ -74,6 +81,6 @@ $(document).ready(function () {
 $("#header-vl").addClass("arabic-head-vl");
 $("#table-row-vl").addClass("arabic-table-vl");
 <% end %>
-})
+});
 
 </script>
