[Issue #165][WIP] Fixed message in get score only

--- a/arability/app/views/games/_get_score_only.html.erb
+++ b/arability/app/views/games/_get_score_only.html.erb
@@ -5,7 +5,7 @@
     <% else %>
       <a class="pull-left btn btn-success" style="padding: 5px; margin-left:28px; margin-top: 28px;" href="/game"><%= t(:restart_game) %></a>
     <% end %>
-    <h3 class="title-head"><%= t(:game_over) %><br><br>You have scored<br><br> <%= @score %></h3>
+    <h3 class="title-head"><%= t(:game_over) %><br><br><%= t(:lose_score) %><br><br> <%= @score %></h3>
   </div>
 </div>
 
