--- a/arability/app/views/projects/load_synonyms.js.erb
+++ b/arability/app/views/projects/load_synonyms.js.erb
@@ -10,9 +10,9 @@ update_synonym_list(synonym_names, synonym_ids);
 function update_synonym_list(synonym_names, synonym_ids){
 	if(synonym_names.length == 0){
 		<% if I18n.locale == :en %>
-			$("#selected_synonym").html("<option>no translations</option>");
+			$("#selected_synonym").html("<option value='0'>no translations</option>");
 		<% else %>
-			$("#selected_synonym").html("<option>لا يوجد معاني</option>");
+			$("#selected_synonym").html("<option value='0'>لا يوجد معاني</option>");
 		<% end %>
 		document.getElementById("selected_synonym").disabled=true;
 	}
