--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -46,7 +46,6 @@
   font-size: 50px;
   padding-top: 40px;
   height:50px;
-
 }
 
 #synonym_button{
@@ -311,7 +310,6 @@ margin-left: 80px;
 .award-zone {
   overflow-y: scroll;
   height:100%;
-  text-align:right;
 }
 
 .award {
@@ -462,5 +460,139 @@ margin-left: 80px;
   width: 53px;
   height: 35px;
   border-radius: 10px;
-  font-size:20px;
 }
+
+.won, .not-won {
+  color: white;
+  width: 100%;
+  float: left;
+}
+
+.title-head {
+  color: white;
+  text-align: center;
+  font-size: 270%;
+  border-top:solid;
+  border-bottom: solid;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border-width: 3px;
+  border-color: #41556B;
+  font-weight: 300;
+}
+
+.award-new {
+  padding-top: 8px;
+  float: left;
+  width: 150px;
+  height: 150px;
+  min-height: 150px;
+  background-color: #41556B;
+  border-radius: 10px;
+  margin-top: 14px;
+  margin-left: 24px;
+}
+
+.award-new:hover {
+  background-color: rgba(65,85,107,0.5);
+}
+
+.award-new:hover .award-image center img {
+  display:none;
+}
+
+.award-new:hover .award-new-req {
+  display: block;
+}
+
+.award-new:hover .award-new-name {
+  padding-top: 15px;
+}
+
+.award-image center img {
+  padding: 17px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.award-new-name {
+  padding-top: 4px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.award-new-req {
+  display: none;
+  padding-top: 18px;
+  text-align:center;
+  font-size: 18px;
+}
+
+
+.award-new-not {
+  padding-top: 8px;
+  float: left;
+  width: 150px;
+  height: 150px;
+  min-height: 150px;
+  background-color: rgba(203, 58, 77, 0.5);
+  border-radius: 10px;
+  margin-top: 14px;
+  margin-left: 24px;
+}
+
+.award-new-not:hover {
+  background-color: rgba(203,58,77,0.2);
+}
+
+.award-new-not:hover .award-image center img {
+  display:none;
+}
+
+.award-new-not:hover .award-new-req {
+  display: block;
+}
+
+.award-new-not:hover .award-new-name {
+  padding-top: 15px;
+}
+
+.award-image center img {
+  padding: 17px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.award-new-name {
+  padding-top: 4px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.award-new-req {
+  display: none;
+  padding-top: 18px;
+  text-align:center;
+  font-size: 18px;
+}
+
+.none {
+  width: 700px;
+  font-size: 190%;
+  line-height: 40px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-right: 12px;
+  padding-left: 12px;
+  text-align: center;
+  border-radius: 10px;
+  background-color:rgba(203,58,77,0.3);
+}
+
+.none:hover {
+  background-color: rgba(203,58,77,0.5);
+}
+
+
